# problemas-de-programacion

./: .gitignore  README
2005 East Central Regional Contest/ProblemA/: main.java
HUNAN/: IMultimedia.java  IPasajero.java  IServidorIFE.java
HUNAN/P10001/: Main.java
HUNAN/P10008/: Main.java
HUNAN/P10014/: Main.java
HUNAN/P10050/: Main.java
PKU/HopelessCoach/: Main.java
PKU/P1001/: Main.java
PKU/P1002/: Main.java
PKU/P1083/: Main.java
PKU/P1575/: Main.java
PKU/P1654/: Main.java
PKU/P1696/: Main.java
PKU/P1787/: Main.java
PKU/P2000/: Main.java
PKU/P2001/: Main.java
PKU/P2002/: Main.java
PKU/P2003/: Main.java
PKU/P2005/: Main.java
PKU/P2007/: Main.java
PKU/P2027/: Main.java
PKU/P2062/: Main.java
PKU/P2083/: Main.java
PKU/P2245/: Main.java
PKU/P2251/: Main.java
PKU/P2262/: Main.java
PKU/P2339/: Main.java
PKU/P2408/: Main.java
Project euler/: problem1.py  problem10.java  problem104.py  problem11.py  problem12.java  problem14.java  problem14.py  problem142.py  problem145.py  problem15.py  problem16.py  problem17.py  problem2.py  problem22.java  problem23.py  problem24.py  problem25.py  problem28.py  problem29.py  problem3.py  problem30.py  problem31.py  problem33.py  problem35.java  problem4.java  problem40.java  problem40.py  problem41.py  problem43.java  problem49.py  problem52.java  problem57.py  problem8.py  problem9.java
hacker-rank-challenges/: build.sbt
hacker-rank-challenges/haskell/prefix-compression/: prefix-compression.cabal
hacker-rank-challenges/haskell/prefix-compression/app/: Main.hs
(+36 files in other folders)
