name:                prefix-compression
version:             0.1.0.0
synopsis:            Initial project template from stack
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable prefix-compression-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers >= 0.5.6
  default-language:    Haskell2010